--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 baseURL: ''
-title: TailBliss
+title: SherpaSec
 languageCode: en-us
 DefaultContentLanguage: en
 enableEmoji: true
@@ -49,47 +49,43 @@ params:
   author: Nusser Studios
   authorimage: ../assets/images/global/author.webp
   og_image: /images/tailbliss-cover.png
-  moto: "Super Fast, and Flexible"
-  description: "A Hugo theme built with love, using TailwindCSS 3, Alpine.JS, and Hugo Pipes. Images are optimized for use with Hugo Pipes for WebP format."
+  moto: "Uniting Minds, Empowering Security"
+  description: "A Malaysian volunteer-based cybersecurity community aiming to create a sustainable cybersecurity ecosystem."
   disable_theme_toggle: false
   disable_stay_uptodate: false
 
   p1:
     heading: "Our mission"
-    image: "images/pages/our-mission.png"
+    image: "images/pages/DALL-E-IMG1.webp"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
-      - text: "Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna. Sollicitudin tristique eroserat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna."
-      - text: "Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim fermentum lacus in. Viverra."
+      - text: "Facilitate meaningful collaborations between students and cybersecurity professionals to create a dynamic and inclusive community."
+      - text: "Empower the next generation of cybersecurity experts by promoting the exchange of knowledge, skills, and insights between students and working professionals."
+      - text: "Build a foundation for a secure digital future by bridging the gap between academia and industry, ensuring a seamless transition for students into the cybersecurity workforce."
   p2:
-    heading: "Just in time for Hacktoberfest with JIT Tailwind."
-    image: "images/pages/hacktoberfest.jpg"
+    heading: "Community Call"
+    image: "images/pages/DALL-E-IMG7.webp"
     content:
-      - text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at purus non enim commodo tincidunt vel in nulla. Aenean pretium dolor non ultricies bibendum. Etiam quis blandit enim. Nunc condimentum ut lorem in faucibus. Phasellus varius ligula et commodo tristique. Nunc sodales nisl nec laoreet vehicula. Donec velit nibh, sollicitudin at nulla a, egestas dignissim eros. Sed lacinia hendrerit interdum. Vestibulum pellentesque sem venenatis nisl tempor accumsan sit amet tempus felis. Mauris leo diam, porttitor nec bibendum id, tempus ac nulla. Etiam congue ornare erat at convallis. Donec in nisi dapibus, mattis risus vel, imperdiet enim. Donec fermentum sit amet tortor nec tincidunt. Nam nec lectus tortor. Nunc sit amet laoreet orci, porta ornare massa. Phasellus eget lorem mi. Nam eleifend ultricies sapien, quis mollis leo bibendum at. Quisque viverra lorem sit amet magna aliquet, et dignissim arcu eleifend."
+      - text: "Our vibrant community is eagerly seeking speakers from all walks of life, embracing diversity in age and experience. Whether you're a seasoned expert or a fresh voice, we invite you to share your insights and passion with us. Additionally, we're actively scouting for venues to host our events, fostering an environment where ideas can flourish and connections can be forged. Together, through volunteering as speakers, we believe in shaping our community and creating meaningful dialogue that enriches us all. Join us on this journey of collaboration and empowerment. <br><br> For those interested in getting involved or learning more about opportunities to contribute, we encourage you to explore our 'Contact' section for additional information. Join us as we embark on this inspiring journey of collaboration, growth, and empowerment."
   p3:
-    heading: "Backed by world-renowned investors"
+    heading: "Our partners and sponsors"
+    image: "images/pages/DALL-E-IMG5.webp"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
+      - text: "SherpaSec is supported by dedicated sponsors and community partners, enabling us to deliver valuable content and services to our audience. Together, we strive to build a stronger, more connected community."
     links:
-      - text: Meet our investors and advisors
+      - text: Meet our partners and sponsors
         url: "#"
     logos:
       - identifier: a
-        image: "images/global/sample-logo.svg"
-        alt: "a"
-      - identifier: b
-      - identifier: c
-      - identifier: d
-      - identifier: e
-      - identifier: f
+        image: "images/global/DALL-E-IMG5.webp"
+        alt: "Company_Logo_Example"
   p4:
-    heading: "From the blog"
+    heading: "Past Events"
     content:
-      - text: "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed."
+      - text: "Our past events including meetups, workshops, and etc."
   p5:
     heading: "Stay Up to Date"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque."
+      - text: "Subscribe to our newsletter to stay up to date with the latest news and events."
     action: "#"
     label: "Email address"
     placeholder: "Enter your email"
@@ -97,25 +93,28 @@ params:
 
   social_media:
     github:
-      enabled: true
-      url: 'https://github.com/nusserstudios'
+      enabled: false
+      url: 'https://github.com/'
     facebook:
-      enabled: true
-      url: 'https://facebook.com/nusserstudios'
+      enabled: false
+      url: 'https://facebook.com/'
     instagram:
-      enabled: true
-      url: 'https://instagram.com/nusserstudios'
+      enabled: false
+      url: 'https://instagram.com/'
     twitter:
       enabled: true
-      url: '@nusserstudios'
-    
+      url: '@sherpasecmy'
+    linkedin:
+      enabled: true
+      url: 'https://www.linkedin.com/company/sherpasec/'
+
 
 menu:
   main:
-    - identifier: prose
-      name: Prose
-      url: /prose/
-      weight: 10
+    # - identifier: prose
+    #   name: Prose
+    #   url: /prose/
+    #   weight: 10
     - identifier: about
       name: About
       url: /about/
@@ -124,59 +123,84 @@ menu:
       pre: dropdown
       name: Categories
       weight: 30
-    - identifier: dropdown
-      pre: complexdropdown
-      name: Dropdown
-      weight: 40
+    # - identifier: dropdown
+    #   pre: complexdropdown
+    #   name: Dropdown
+    #   weight: 40
     - identifier: contact
+      pre: dropdown
       name: Contact
-      url: /contact/
-      weight: 50
+      weight: 40
   categories:
-    - identifier: prose
-      name: Prose
-      url: /prose/
+    - identifier: past-events
+      name: Past Events
+      url: /categories/past-events/
       weight: 10
-    - identifier: about
-      name: About
-      url: /about/
+    - identifier: community-partners
+      name: Community Partners
+      url: /community-partners
       weight: 20
-  dropdown:
-    - identifier: appearance
-      pre: stars # can be stars, comments or piechart
-      name: Appearance
-      post: "Easy customization"
-      url: "#"
-      weight: 10
-    - identifier: comments
-      pre: comments # can be stars, comments or piechart
-      name: Comments
-      post: "Check your latest comments"
-      url: "#"
-      weight: 20
-    - identifier: analytics
-      pre: piechart # can be stars, comments or piechart
-      name: Analytics
-      post: "Take a look at your statistics"
-      url: "#"
+  contact:
+    - identifier: call-for-speakers
+      name: Call for Speakers
+      url: /contact/call-for-speakers
       weight: 30
+    - identifier: call-for-venue
+      name: Call for Venue
+      url: /contact/call-for-venue
+      weight: 40
+    - identifier: contact-us
+      name: Contact Us
+      url: /contact/contact-us
+      weight: 50
+    # - identifier: news
+    #   name: News
+    #   url: /categories/news/
+    #   weight: 20
+    # - identifier: prose
+    #   name: Prose
+    #   url: /prose/
+    #   weight: 10
+    # - identifier: about
+    #   name: About
+    #   url: /about/
+    #   weight: 20
+  # dropdown:
+  #   - identifier: appearance
+  #     pre: stars # can be stars, comments or piechart
+  #     name: Appearance
+  #     post: "Easy customization"
+  #     url: "#"
+  #     weight: 10
+  #   - identifier: comments
+  #     pre: comments # can be stars, comments or piechart
+  #     name: Comments
+  #     post: "Check your latest comments"
+  #     url: "#"
+  #     weight: 20
+  #   - identifier: analytics
+  #     pre: piechart # can be stars, comments or piechart
+  #     name: Analytics
+  #     post: "Take a look at your statistics"
+  #     url: "#"
+  #     weight: 30
   footer:
     - identifier: about
       name: About
       url: /about/
       weight: 10
-    - identifier: blog
-      name: Blog
-      url: /categories/blog/
+    - identifier: past-events
+      name: Past Events
+      url: /categories/past-events/
       weight: 20
-    - identifier: news
-      name: News
-      url: /categories/news/
-      weight: 30
-    - identifier: prose
-      name: Prose
-      url: /prose/
-      weight: 40
+    # - identifier: news
+    #   name: News
+    #   url: /categories/news/
+    #   weight: 30
+    # - identifier: prose
+    #   name: Prose
+    #   url: /prose/
+    #   weight: 40
     - identifier: contact
       name: Contact
       url: /contact/
