--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'tailbliss-sherpasec/'
+baseURL: 'https://tzion0.github.io/tailbliss-sherpasec/'
 title: SherpaSec
 languageCode: en-us
 DefaultContentLanguage: en
